<resources>    <string name="app_name">tugasakhir</string>    <string name="from">asal</string>    <string name="event_name">event_name</string>    <string name="deskrips_event">deskripsi</string>    <string name="list">List</string>    <string name="grid">Grid</string>    <string name="cardview">CardView</string>    <string name="favorite">favorite</string>    <string name="share">share</string></resources>