<?xml version="1.0" encoding="utf-8"?><android.support.v7.widget.CardView    xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="wrap_content"    xmlns:card_view="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    card_view:cardCornerRadius="4dp"    android:layout_marginBottom="4dp"    android:layout_marginRight="8dp"    android:layout_marginTop="4dp"    android:layout_marginLeft="8dp"    >    <RelativeLayout        android:layout_width="match_parent"        android:layout_height="200dp"        android:padding="8dp"        >        <ImageView            android:layout_width="150dp"            android:layout_height="220dp"            android:layout_marginBottom="4dp"            android:scaleType="centerCrop"            android:id="@+id/img_item_foto"            tools:src="@color/colorPrimary"            />        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            tools:text="@string/event_name"            android:textSize="30sp"            android:layout_toRightOf="@+id/img_item_foto"            android:layout_toEndOf="@+id/img_item_foto"            android:layout_marginRight="@dimen/coba"            android:layout_marginBottom="8dp"            android:layout_marginTop="@dimen/coba"            android:layout_marginLeft="20dp"            android:id="@+id/tv_item_nama"            />        <TextView            android:layout_width="match_parent"            android:layout_height="match_parent"            tools:text="@string/deskrips_event"            android:layout_above="@+id/layout_button"            android:layout_below="@id/tv_item_nama"            android:layout_marginLeft="20dp"            android:layout_marginRight="@dimen/coba"            android:layout_toEndOf="@id/img_item_foto"            android:layout_toRightOf="@id/img_item_foto"            android:ellipsize="end"            android:maxLines="5"            android:id="@+id/tv_item_deskripsi"            />        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:id="@+id/layout_button"android:orientation="horizontal"            android:layout_toRightOf="@+id/img_item_foto"            android:layout_toEndOf="@+id/img_item_foto"            android:layout_marginStart="@dimen/coba"            android:layout_marginLeft="@dimen/coba"            android:layout_alignParentBottom="true"            ><Button    android:layout_width="match_parent"    android:layout_height="wrap_content"    style="@style/Widget.AppCompat.Button.Colored"    android:id="@+id/btn_favorite"    android:text="@string/favorite"    android:layout_weight="1"    android:textSize="12sp"    />            <Button                android:layout_width="match_parent"                android:layout_height="wrap_content"                style="@style/Widget.AppCompat.Button.Colored"                android:id="@+id/btn_share"                android:text="@string/share"                android:layout_weight="1"                android:textSize="12sp"                />        </LinearLayout>    </RelativeLayout></android.support.v7.widget.CardView>