<?xml version="1.0" encoding="utf-8"?><FrameLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".DetailAcaraActivity">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        >                <android.support.v7.widget.CardView            android:layout_width="match_parent"            android:layout_height="wrap_content">                <RelativeLayout                    android:layout_width="match_parent"                    android:layout_height="200dp"                    android:padding="8dp"                    >                    <ImageView                        android:layout_width="150dp"                        android:layout_height="220dp"                        tools:src="@color/colorPrimary"                        android:layout_marginBottom="4dp"                        android:scaleType="centerCrop"                        android:id="@+id/img_item_foto"                        />                    <TextView                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        tools:text="@string/event_name"                        android:textSize="30sp"                        android:layout_toRightOf="@+id/img_item_foto"                        android:layout_toEndOf="@+id/img_item_foto"                        android:layout_marginRight="@dimen/coba"                        android:layout_marginBottom="8dp"                        android:layout_marginTop="@dimen/coba"                        android:layout_marginLeft="15dp"                        android:id="@+id/tv_item_nama"                        />                    <TextView                        android:layout_width="match_parent"                        android:layout_height="match_parent"                        tools:text="@string/from"                        android:layout_below="@id/tv_item_nama"                        android:layout_marginLeft="20dp"                        android:layout_marginRight="@dimen/coba"                        android:layout_toEndOf="@id/img_item_foto"                        android:layout_toRightOf="@id/img_item_foto"                        android:layout_marginTop="@dimen/coba"                        android:ellipsize="end"                        android:maxLines="5"                        android:textSize="20sp"                        android:id="@+id/tv_item_asal"                        />                </RelativeLayout>        </android.support.v7.widget.CardView>        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:text="DESKRIPSI"            android:textSize="30sp"            android:textStyle="bold"            />        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:id="@+id/tv_item_deskripsi"            android:textSize="16sp"            tools:text="@string/deskrips_event"            android:layout_marginTop="16dp"            />    </LinearLayout></FrameLayout>